# bifit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
bifit/: __init__.py  logging_.py
bifit/continuation/: __init__.py  base_continuer.py  deflated_continuation.py  pseudo_arclength.py  select_continuer.py
bifit/estimation/: __init__.py  initial_guess.py  parameter_estimator.py  problem_generator.py
bifit/initial_guess/: __init__.py  bifurcation_point.py  match_solutions.py  steady_state.py  steady_state_curve.py  trace_data.py
bifit/models/: __init__.py  base_model.py  specifications.py  utils.py
bifit/optimization/: __init__.py  check_regularity.py  line_search.py
bifit/parameter_estimation/: parameter_estimator.py  results.py
bifit/parser/: __init__.py  yaml_parser.py
bifit/postprocessing/: __init__.py  pickler.py  plot_decorator.py  reader.py
bifit/preprocessing/: __init__.py  preprocess_data.py  sampler.py
docs/: bifit.html  index.html  search.js
docs/bifit/: continuation.html  initial_guess.html  logging_.html  models.html  optimization.html  parameter_estimation.html  parser.html  preprocessing.html
examples/autocatalytic-network/: main.py  main_lhs.py  meta_parameters.yaml  model_equations.py
examples/peroxidase-oxidase/: main.py  main_lhs.py  meta_parameters.yaml  model_equations.py
examples/predator-prey/: main.py  main_lhs.py  meta_parameters.yaml  model_equations.py
examples/semiconductor-laser/: main.py  main_lhs.py  meta_parameters.yaml  (+2 more)
pdoc-template/: module.html.jinja2
(+41 files in other folders)
